src/test/ui/consts/const-len-underflow-separate-spans.stderr
error: any use of this value will cause an error
  --> $DIR/const-len-underflow-separate-spans.rs:7:20
   |
LL | const LEN: usize = ONE - TWO;
   | ----------------   ^^^^^^^^^ attempt to compute `1_usize - 2_usize`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

error[E0080]: evaluation of constant value failed
  --> $DIR/const-len-underflow-separate-spans.rs:12:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
Future incompatibility report: Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/const-len-underflow-separate-spans.rs:7:20
   |
LL | const LEN: usize = ONE - TWO;
   | ----------------   ^^^^^^^^^ attempt to compute `1_usize - 2_usize`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

